--- a/task03_0606/Views/Member/MemberTable.cshtml
+++ b/task03_0606/Views/Member/MemberTable.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<task03_0606.Models.member>
 @{
     ViewBag.Title = "MemberTable";
     Layout = "~/Views/_Member_SuperUser_LayoutPage1.cshtml";
@@ -43,30 +43,17 @@
                             </tr>
                         </tfoot>
                         <tbody>
-                            <tr>
-                                <td>張三</td>
-                                <td>0912345678</td>
-                                <td>123@123</td>
-                                <td>台中市北區OO路</td>
-                                <td><a href="#">詳細資料</a></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>李四</td>
-                                <td>0912345678</td>
-                                <td>123@123</td>
-                                <td>台中市西區OO路</td>
-                                <td><a href="#">詳細資料</a></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>王五</td>
-                                <td>0912345678</td>
-                                <td>123@123</td>
-                                <td>台中市沙鹿區OO路</td>
-                                <td><a href="#">詳細資料</a></td>
-                                <td></td>
-                            </tr>
+                            @foreach (var item in Model) {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.lastName)@Html.DisplayFor(modelItem => item.firstName)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.phoneNum)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.email)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.city)@Html.DisplayFor(modelItem => item.country)@Html.DisplayFor(modelItem => item.address)</td>
+                                    <td><a href="#">詳細資料</a></td>
+                                    <td></td>
+                                </tr>
+                            }
+                            
 
                         </tbody>
                     </table>
