--- a/task03_0606/Views/Home/Restaurent.cshtml
+++ b/task03_0606/Views/Home/Restaurent.cshtml
@@ -4,10 +4,7 @@
 }
 
 <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-        <a href="#">餐廳列表</a>
-    </li>
-    @*<li class="breadcrumb-item active">My Dashboard</li>*@
+    <li class="breadcrumb-item active">餐廳列表</li>
 </ol>
 
 <div class="row">
