--- a/task03_0606/Views/Home/Order.cshtml
+++ b/task03_0606/Views/Home/Order.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using task03_0606.Models
+@model List<OrderList> 
 @{
     ViewBag.Title = "Order";
 }
@@ -6,16 +7,16 @@
 <ol class="breadcrumb">
     <li class="breadcrumb-item active">訂單明細</li>
 </ol>
-
+<div id="debug"></div>
 <div class="row">
-    <p id="123 ">555555</p>
     <div class="col-xl-12 col-sm-12 mb-12 ">
         <div class="card-header">
             <table class="table" >
                 <tr id="orderDetail">
-                    <th>訂單單號：201806060001</th>
-                    <th>座位：15</th>
-                    <th>接單時間：11:59 PM</th>
+                    <th>訂單編號：<label id ="orderDetail_orderID">201806060001</label></th>
+                    <th>座位：    <label id="orderDetail_seatID">  15          </label></th>
+                    <th>訂餐時間：<label id="orderDetail_time">    11:59 PM    </label></th>
+                    <th><a href="#" class="btn btn-success "><i class="fa fa-fw fa-sign-in"></i>出餐</a></th>
                 </tr>
             </table>
         </div>
@@ -77,7 +78,7 @@
 
     <div class="col-xl-12 col-sm-12 mb-12">
         <div class="card-header">
-            <i class="fa fa-table"></i> 訂單清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
+            <i class="fa fa-table"></i>未出餐清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -93,12 +94,15 @@
                     </thead>
 
                     <tbody>
+                        @foreach (OrderList order in orders)
+                        {
                         <tr class="orderListItem">
-                            <td>201806060001</td>
+                            <td></td>
                             <td>15</td>
                             <td>2018-06-06 11:59 PM</td>
                             <td></td>
                         </tr>
+                        }
                         <tr class="orderListItem">
                             <td>201806060005</td>
                             <td>20</td>
@@ -126,21 +130,15 @@
 </div>
 <script>
    
-    //$("#dataTable").click(function () {
-    //    alert(
-    //        $("#dataTable").find("tr.orderListItem")[0].innerText
-    //        ); 
-    //});
-
+    //找 id=dataTable table 下的 tr class=orderListItem ==> tr[]
     $("#dataTable").find("tr.orderListItem").click(function () {
         //alert(this.innerText);
-        alert(this.cells[0].innerText);
-        alert(
-            //$("#orderDetail").innerText
-            $("#123").innerText
-            );
-        //$("#orderDetail").find("tr").cells[0] = this.cells[0];
-
+        //alert(this.cells[0].innerText);
+        //$("#debug").text(this.cells[0].innerText);
+        $("#orderDetail_orderID").text(this.cells[0].innerText);
+        $("#orderDetail_seatID").text(this.cells[1].innerText);
+        $("#orderDetail_time").text(this.cells[2].innerText);
     });
+
 
 </script>
