--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -33,51 +33,62 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             @*側邊導覽*@
             <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-                @*商家專用-餐廳列表*@
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="餐廳列表">
-                    <a class="nav-link" href="~/Home/Restaurent">
-                        <i class="fa fa-fw fa-cutlery"></i>
-                        <span class="nav-link-text">餐廳列表</span>
-                    </a>
-                </li>
-                @*美食分類*@
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-                        <i class="fa fa-fw fa-cutlery"></i>
-                        <span class="nav-link-text">美食分類</span>
-                    </a>
-                    <ul class="sidenav-second-level collapse" id="collapseExamplePages">
-                        <li>
-                            <a href="login.html"> <i class="fa fa-glass"></i> 湯品/飲料</a>
-                        </li>
-                        <li>
-                            <a href="register.html">速食</a>
-                        </li>
-                        <li>
-                            <a href="forgot-password.html">飯</a>
-                        </li>
-                        <li>
-                            <a href="blank.html">麵</a>
-                        </li>
-                    </ul>
-                </li>
+                @if (Session["memberType"].ToString() == "Customer")
+                {
+                    @*顧客專用-餐廳列表*@
+                    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="餐廳列表">
+                        <a class="nav-link" href="~/Home/Restaurent">
+                            <i class="fa fa-fw fa-cutlery"></i>
+                            <span class="nav-link-text">餐廳列表</span>
+                        </a>
+                    </li>
+                    @*顧客專用-美食分類*@
+                    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
+                        <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
+                            <i class="fa fa-fw fa-cutlery"></i>
+                            <span class="nav-link-text">美食分類</span>
+                        </a>
+                        <ul class="sidenav-second-level collapse" id="collapseExamplePages">
+                            <li>
+                                <a href="login.html"> <i class="fa fa-glass"></i> 湯品/飲料</a>
+                            </li>
+                            <li>
+                                <a href="register.html">速食</a>
+                            </li>
+                            <li>
+                                <a href="forgot-password.html">飯</a>
+                            </li>
+                            <li>
+                                <a href="blank.html">麵</a>
+                            </li>
+                        </ul>
+                    </li>
+                };
+                @if (Session["memberType"].ToString() == "Business")
+                {
+                    @*商家專用-新訂單*@
+                    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="新訂單">
+                        <a class="nav-link" href="~/Home/Order?userID=1">
+                            <i class="fa fa-fw fa-sticky-note"></i>
+                            <span class="nav-link-text">新訂單</span>
+                        </a>
+                    </li>
 
-                @*商家專用-新訂單*@
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="新訂單">
-                    <a class="nav-link" href="~/Home/Order">
-                        <i class="fa fa-fw fa-sticky-note"></i>
-                        <span class="nav-link-text">新訂單</span>
-                    </a>
-                </li>
-
-                @*商家專用-歷史訂單*@
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="歷史訂單">
-                    <a class="nav-link" href="~/Home/HistoryOrder">
-                        <i class="fa fa-fw fa-sticky-note"></i>
-                        <span class="nav-link-text">歷史訂單</span>
-                    </a>
-                </li>
-
+                    @*商家專用-歷史訂單*@
+                    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="歷史訂單">
+                        <a class="nav-link" href="~/Home/HistoryOrder?userID=1">
+                            <i class="fa fa-fw fa-sticky-note"></i>
+                            <span class="nav-link-text">歷史訂單</span>
+                        </a>
+                    </li>
+                    @*商家專用-產品列表*@
+                    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="產品列表">
+                        <a class="nav-link" href="~/#/Product?userID=1">
+                            <i class="fa fa-fw fa-sticky-note"></i>
+                            <span class="nav-link-text">產品列表</span>
+                        </a>
+                    </li>
+                };
                 @*網站意見反應*@
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="意見反應">
                     <a class="nav-link" href="~/Home/Respone">
@@ -97,100 +108,105 @@
             </ul>
             @*上方導覽*@
             <ul class="navbar-nav ml-auto">
-                @*商家專用-新單訊息*@
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-fw fa-bell"></i>
-                        <span class="indicator text-primary d-none d-lg-block">
-                            <i class="fa fa-fw fa-circle">10</i>  @*新增筆數*@
-                        </span>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="messagesDropdown">
-                        <h6 class="dropdown-header">新訂單：</h6>
 
-                        <div class="dropdown-divider"></div>
-                        <div class="dropdown-item">
-                            <a href="/Home/Order?orderID=1"><strong>訂單1</strong> </a>
-                            <span class="small float-right text-muted">新增時間 11:21 AM</span>
-                            <div class="dropdown-message small"> 桌號: 1 號, 訂餐內容: .... Hey there! This new version of SB Admin is Hey there! This new version of SB Admin is</div>
-                        </div>
-
-                        <div class="dropdown-divider"></div>
-                        <div class="dropdown-item">
-                            <a href="/Home/Order?orderID=2"><strong>訂單2</strong> </a>
-                            <span class="small float-right text-muted">新增時間 11:21 AM</span>
-                            <div class="dropdown-message small"> 桌號: 2 號, 訂餐內容: .... Hey there! This new version of SB Admin is Hey there! This new version of SB Admin is</div>
-                        </div>
-
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item small" href="~/Home/OrderList?UserID=1">詳細訂單明細</a>
-                    </div>
-                </li>
-
-                @*顧客專用-購物車訊息*@
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-fw fa-shopping-cart"></i>
-                        <span class="indicator text-warning d-none d-lg-block">
-                            <i class="fa fa-fw fa-circle">20</i> @*購物筆數*@
-                        </span>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="alertsDropdown">
-                        <h6 class="dropdown-header">購物車</h6>
-
-                        <div class="dropdown-divider"></div>
-                        <div class="dropdown-item">
-                            <span class="text-danger">
-                                <a href="~/#/Products?productID=1">
-                                    <strong> 產品1 </strong>
-                                </a>
-                                <a href="~/#/Delete?productID=1" class="btn btn-sm btn-danger pull-right" aria-label="Delete"> 
-                                        <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                </a>
+                @if (Session["memberType"].ToString() == "Business")
+                {
+                    @*商家專用-新單訊息*@
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-fw fa-bell"></i>
+                            <span class="indicator text-primary d-none d-lg-block">
+                                <i class="fa fa-fw fa-circle">10</i>  @*新增筆數*@
                             </span>
-                            <div class="dropdown-message small">
-                            This is an automated server response message. All systems are online.
-                            </div>
-                        </div>
-
-
-                        <div class="dropdown-divider"></div>
-                        <div class="dropdown-item">
-                            <span class="text-danger">
-                                <a href="~/#/Products?productID=2">
-                                    <strong> 產品2 </strong>
-                                </a>
-                                <a href="~/#/Delete?productID=2" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
-                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                </a>
-                            </span>
-                            <div class="dropdown-message small">
-                                This is an automated server response message. All systems are online.
-                            </div>
-                        </div>
-
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">
-                            <span class="text-success">
-                                <strong>
-                                    <i class="fa fa-long-arrow-up fa-fw"></i>Status Update
-                                </strong>
-                            </span>
-                            <span class="small float-right text-muted">11:21 AM</span>
-                            <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
                         </a>
+                        <div class="dropdown-menu" aria-labelledby="messagesDropdown">
+                            <h6 class="dropdown-header">新訂單：</h6>
 
+                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-item">
+                                <a href="/Home/Order?orderID=1"><strong>訂單1</strong> </a>
+                                <span class="small float-right text-muted">新增時間 11:21 AM</span>
+                                <div class="dropdown-message small"> 桌號: 1 號, 訂餐內容: .... Hey there! This new version of SB Admin is Hey there! This new version of SB Admin is</div>
+                            </div>
 
-                        <div class="dropdown-divider"></div>
-                        <div class="dropdown-item small">
-                            <span>
-                                <a href="~/#/ShoppingList?userID=1">詳細購物明細</a>
-                                <a href="~/#/Payment" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
-                            </span>
+                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-item">
+                                <a href="/Home/Order?orderID=2"><strong>訂單2</strong> </a>
+                                <span class="small float-right text-muted">新增時間 11:21 AM</span>
+                                <div class="dropdown-message small"> 桌號: 2 號, 訂餐內容: .... Hey there! This new version of SB Admin is Hey there! This new version of SB Admin is</div>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item small" href="~/Home/OrderList?userID=1">詳細訂單明細</a>
                         </div>
-                    </div>
-                </li>
+                    </li>
+                }
+                @if (Session["memberType"].ToString() == "Customer")
+                {
+                    @*顧客專用-購物車訊息*@
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-fw fa-shopping-cart"></i>
+                            <span class="indicator text-warning d-none d-lg-block">
+                                <i class="fa fa-fw fa-circle">20</i> @*購物筆數*@
+                            </span>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="alertsDropdown">
+                            <h6 class="dropdown-header">購物車</h6>
 
+                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-item">
+                                <span class="text-danger">
+                                    <a href="~/#/Products?productID=1">
+                                        <strong> 產品1 </strong>
+                                    </a>
+                                    <a href="~/#/Delete?productID=1" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
+                                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                    </a>
+                                </span>
+                                <div class="dropdown-message small">
+                                    This is an automated server response message. All systems are online.
+                                </div>
+                            </div>
+
+
+                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-item">
+                                <span class="text-danger">
+                                    <a href="~/#/Products?productID=2">
+                                        <strong> 產品2 </strong>
+                                    </a>
+                                    <a href="~/#/Delete?productID=2" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
+                                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                    </a>
+                                </span>
+                                <div class="dropdown-message small">
+                                    This is an automated server response message. All systems are online.
+                                </div>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">
+                                <span class="text-success">
+                                    <strong>
+                                        <i class="fa fa-long-arrow-up fa-fw"></i>Status Update
+                                    </strong>
+                                </span>
+                                <span class="small float-right text-muted">11:21 AM</span>
+                                <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
+                            </a>
+
+
+                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-item small">
+                                <span>
+                                    <a href="~/#/ShoppingList?userID=1">詳細購物明細</a>
+                                    <a href="~/#/Payment" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                }
                 @*搜尋列*@
                 <li class="nav-item">
                     <form class="form-inline my-2 my-lg-0 mr-lg-2">
@@ -205,20 +221,25 @@
                     </form>
                 </li>
                 @*網站登入/登出*@
+                
+                @if (Session["memberType"].ToString() =="Guest") {
                 <li class="nav-item">
+                   
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
-                        @*<i class="fa fa-fw fa-sign-out"></i>登出*@
-                       
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
-                        <i class="fa fa-fw fa-sign-in"></i>登入
+                        親愛的訪客  您好<i class="fa fa-fw fa-sign-in"></i>登入
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
                         <i class="fa fa-fw fa-question"></i>忘記密碼
+                    </a>
+                </li>
+                }
+                <li class="nav-item">
+                   
+                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
+                        店名XXX  您好 <i class="fa fa-fw fa-sign-out"></i>登出
+
                     </a>
                 </li>
             </ul>
