0608增加各項產品細項

--- a/task03_0606/Views/Products/Fastfoodproducts.cshtml
+++ b/task03_0606/Views/Products/Fastfoodproducts.cshtml
@@ -1,17 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "Aproducts";
+    ViewBag.Title = "Fastfoodproducts";
 }
 
-<h2>飲品/湯品</h2>
+<h2>速食類</h2>
 
 @*<header>
-    <ul>
-        <i class='fa fa-shopping-cart'>
-            <span class='counter'></span>
-        </i>
-    </ul>
-</header>*@
+        <ul>
+            <i class='fa fa-shopping-cart'>
+                <span class='counter'></span>
+            </i>
+        </ul>
+    </header>*@
 <div class='row'>
 
     <div class='product--blue'>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class='product_inner'>
-         
+
             <p>巧克力牛奶</p>
             <p>Price $120</p>
             <button>Add to basket</button>
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class='product_inner'>
-            
+
             <p>現榨蘋果汁</p>
             <p>Price $80</p>
             <button>Add to basket</button>
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="modal-body">
-                    <img src='~/photo/drinksoup/blackcoffee_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/blackcoffee_resized.jpg' width='300'><br />
                         文青最愛，黑咖啡的純郁，最適合喚醒疲勞者緩緩甦醒的心靈。
                     </div>
                     <div class="modal-footer">
@@ -157,8 +157,8 @@
             </div>
         </div>
         @*---copy到此*@
-            <div class='product_inner'>
-           
+        <div class='product_inner'>
+
             <p>純正黑咖啡</p>
             <p>Price $150</p>
             <button>Add to basket</button>
@@ -171,7 +171,7 @@
     @*-----------------------------產品4結束*@
 
     <div class='product--yellow'>
-       @*---copy 開始*@ <!-- Button trigger modal -->
+        @*---copy 開始*@ <!-- Button trigger modal -->
         <img src='~/photo/drinksoup/cocacola_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter4" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle4" aria-hidden="true">
@@ -199,7 +199,7 @@
         @*---copy到此*@
 
         <div class='product_inner'>
-           
+
             <p>可樂</p>
             <p>Price $40</p>
             <button>Add to basket</button>
@@ -239,7 +239,7 @@
         </div>
         @*---copy到此*@
         <div class='product_inner'>
-     
+
             <p>焦糖瑪奇朵</p>
             <p>Price $150</p>
             <button>Add to basket</button>
@@ -280,7 +280,7 @@
         @*---copy到此*@
 
         <div class='product_inner'>
-            
+
             <p>高山烏龍茶</p>
             <p>Price $80</p>
             <button>Add to basket</button>
@@ -310,7 +310,7 @@
                     <div class="modal-body">
                         <img src='~/photo/drinksoup/lemon_resized.jpg' width='300'><br />
                         金桔檸檬茶是非常去火的好茶，酸酸甜甜的味道讓很多人對它愛不釋手~
-                    
+
                     </div>
                     <div class="modal-footer">
 
@@ -321,8 +321,8 @@
             </div>
         </div>
         @*---copy到此*@
-            <div class='product_inner'>
-        
+        <div class='product_inner'>
+
             <p>金桔檸檬</p>
             <p>Price $100</p>
             <button>Add to basket</button>
@@ -350,8 +350,8 @@
                     </div>
 
                     <div class="modal-body">
-                    <img src='~/photo/drinksoup/Orange_resized.jpg' width='300'><br />
-                       從柳橙的果肉榨出的果汁~其酸酸甜甜的味道，十分可口~此款柳橙汁含有果肉顆粒，又是另一種風味哦~ 
+                        <img src='~/photo/drinksoup/Orange_resized.jpg' width='300'><br />
+                        從柳橙的果肉榨出的果汁~其酸酸甜甜的味道，十分可口~此款柳橙汁含有果肉顆粒，又是另一種風味哦~
 
                     </div>
                     <div class="modal-footer">
@@ -365,7 +365,7 @@
         @*---copy到此*@
 
         <div class='product_inner'>
-            
+
             <p>新鮮柳橙汁</p>
             <p>Price $80</p>
             <button>Add to basket</button>
@@ -405,9 +405,9 @@
             </div>
         </div>
         @*---copy到此*@
-        
-            <div class='product_inner'>
-      
+
+        <div class='product_inner'>
+
             <p>日月潭紅茶</p>
             <p>Price $40</p>
             <button>Add to basket</button>
@@ -475,8 +475,8 @@
                     </div>
 
                     <div class="modal-body">
-                    <img src='~/photo/drinksoup/s8_resized.jpg' width='300'><br />
-                     味噌湯是一種湯料理，即麵豉湯，是日本具代表性的傳統食品，常見於日本人的早餐。
+                        <img src='~/photo/drinksoup/s8_resized.jpg' width='300'><br />
+                        味噌湯是一種湯料理，即麵豉湯，是日本具代表性的傳統食品，常見於日本人的早餐。
 
                     </div>
                     <div class="modal-footer">
@@ -490,7 +490,7 @@
         @*---copy到此*@
 
         <div class='product_inner'>
-            
+
             <p>日式味增湯</p>
             <p>Price $80</p>
             <button>Add to basket</button>
