--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -19,9 +19,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <link href="~/css/Astyle.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet/scss" type="text/css" href="~/scss/_Astyle.scss">
+    <link rel="stylesheet/scss" type="text/css" href="~/scss/Astyle.scss">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/sass.js/0.6.3/sass.min.js"></script>
     <script src="~/js/Aindex.js"></script>
+
     
 
 </head>
@@ -44,8 +47,8 @@
                 </li>
                 @*美食分類*@
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-                        <i class="fa fa-fw fa-cutlery"></i>
+                    <a class="nav-link" href="~/Products/index">
+                        <i class="fa fa-fw fa-sticky-note"></i>
                         <span class="nav-link-text">美食分類</span>
                     </a>
                    
