--- a/task03_0606/css/Astyle.css
+++ b/task03_0606/css/Astyle.css
@@ -47,12 +47,13 @@ header i:nth-of-type(2) {
 }
 
 .product, .product--blue, .product--orange, .product--red, .product--green, .product--yellow, .product--pink {
+
   box-shadow: 1px 5px 15px #CCC;
-  width: 15em;
+  width: 10em;
   height: auto;
-  border-radius: 3px;
-  padding: 2em;
-  margin: 1em;
+  border-radius: 6px;
+  padding: 0.5em;
+  margin: 0 auto;
   overflow: hidden;
   position: relative;
   -webkit-box-flex: 1;
@@ -60,7 +61,7 @@ header i:nth-of-type(2) {
           flex: auto;
 }
 .product--blue {
-  background: -webkit-linear-gradient(135deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
+  background: -webkit-linear-gradient(180deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
   background: linear-gradient(-45deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
 }
 .product--orange {
@@ -99,7 +100,7 @@ header i:nth-of-type(2) {
       flex-flow: column wrap;
 }
 .product_inner p {
-  color: rgba(255, 255, 255, 0.9);
+  color: black;
 }
 .product_inner button {
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -130,7 +131,7 @@ header i:nth-of-type(2) {
 .product_overlay {
   background: rgba(255, 255, 255, 0.9);
   width: 100%;
-  height: 100%;
+  height:100%;
   position: absolute;
   top: 0;
   left: 0;
