--- a/task03_0606/css/Astyle.css
+++ b/task03_0606/css/Astyle.css
@@ -47,13 +47,12 @@ header i:nth-of-type(2) {
 }
 
 .product, .product--blue, .product--orange, .product--red, .product--green, .product--yellow, .product--pink {
-
   box-shadow: 1px 5px 15px #CCC;
-  width: 10em;
+  width: 15em;
   height: auto;
-  border-radius: 6px;
-  padding: 0.5em;
-  margin: 0 auto;
+  border-radius: 3px;
+  padding: 2em;
+  margin: 1em;
   overflow: hidden;
   position: relative;
   -webkit-box-flex: 1;
@@ -61,7 +60,7 @@ header i:nth-of-type(2) {
           flex: auto;
 }
 .product--blue {
-  background: -webkit-linear-gradient(180deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
+  background: -webkit-linear-gradient(135deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
   background: linear-gradient(-45deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
 }
 .product--orange {
@@ -100,7 +99,7 @@ header i:nth-of-type(2) {
       flex-flow: column wrap;
 }
 .product_inner p {
-  color: black;
+  color: rgba(255, 255, 255, 0.9);
 }
 .product_inner button {
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -131,7 +130,7 @@ header i:nth-of-type(2) {
 .product_overlay {
   background: rgba(255, 255, 255, 0.9);
   width: 100%;
-  height:100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
