--- a/task03_0606/Views/Products/Drinkproducts.cshtml
+++ b/task03_0606/Views/Products/Drinkproducts.cshtml
@@ -5,18 +5,18 @@
 
 <h2>飲品/湯品</h2>
 
-@*<header>
+<header>
         <ul>
             <i class='fa fa-shopping-cart'>
                 <span class='counter'></span>
             </i>
         </ul>
-    </header>*@
+    </header>
 <div class='row'>
 
     <div class='product--blue'>
         <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/4bec17adc3341_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter" />
+        <img src='~/photo/drinksoup/A1.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/4bec17adc3341_resized.jpg' width='300' /><br />
+                        <img src='~/photo/drinksoup/A1.jpg' width='500' /><br />
                         將單品熱咖啡倒入鋼杯中，將鋼杯放入裝有冰塊和水的容器中，等待咖啡變涼~最後在杯口放上一球香草冰淇淋，並淋上少許巧克力醬~
                     </div>
                     <div class="modal-footer">
@@ -54,7 +54,7 @@
     @*-----------------------------產品1結束*@
     <div class='product--orange'>
         <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/4bec1788726f1_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter1" />
+        <img src='~/photo/drinksoup/A2.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter1" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle1" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/4bec17adc3341_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A2.jpg' width='500' /><br />
                         巧克力牛奶，是一種可可味道的牛奶飲料，冷熱飲用皆宜~
                     </div>
                     <div class="modal-footer">
@@ -94,7 +94,7 @@
     <div class='product--red'>
 
         <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/apple_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2" />
+        <img src='~/photo/drinksoup/A3.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle2" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -107,7 +107,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/apple_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A3.jpg' width='500' /><br />
                         蘋果可以提供能量,因為它含有糖~新鮮的蘋果汁味道好,嬰幼和孩子們都很喜歡~是一種完美飲品。
                     </div>
                     <div class="modal-footer">
@@ -132,7 +132,7 @@
     @*-----------------------------產品3結束*@
     <div class='product--green'>
         <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/blackcoffee_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter3" />
+        <img src='~/photo/drinksoup/A4.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter3" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle3" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/blackcoffee_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A4.jpg' width='500' /><br />
                         文青最愛，黑咖啡的純郁，最適合喚醒疲勞者緩緩甦醒的心靈。
                     </div>
                     <div class="modal-footer">
@@ -172,7 +172,7 @@
 
     <div class='product--yellow'>
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/cocacola_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter4" />
+        <img src='~/photo/drinksoup/A5.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter4" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle4" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/cocacola_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A5.jpg' width='500' /><br />
                         一種黑褐色、帶有甜味、含咖啡因的碳酸飲料，但不含酒精，永不退燒的商品。
                     </div>
                     <div class="modal-footer">
@@ -213,7 +213,7 @@
     <div class='product--pink'>
 
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/coffee_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter5" />
+        <img src='~/photo/drinksoup/A6.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter5" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter5" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle5" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -226,7 +226,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/coffee_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A6.jpg' width='500' /><br />
                         焦糖瑪琪雅朵是一種加入焦糖的瑪琪雅朵咖啡。在香濃熱牛奶上加入濃縮咖啡、香草，最後淋上純正焦糖而製成的飲品，特點是在一杯飲品裡可以喝到三種不同的口味。
                     </div>
                     <div class="modal-footer">
@@ -253,7 +253,7 @@
     <div class='product--blue'>
 
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/greentea_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter6" />
+        <img src='~/photo/drinksoup/A7.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter6" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter6" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle6" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -266,7 +266,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/greentea_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A7.jpg' width='500' /><br />
                         高山烏龍茶以海拔1,000公尺以上茶園所產製的茶葉所以稱「高山茶」~
                     </div>
                     <div class="modal-footer">
@@ -295,7 +295,7 @@
     @*-----------------------------產品7結束*@
     <div class='product--orange'>
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/lemon_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter7" />
+        <img src='~/photo/drinksoup/A8.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter7" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter7" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle7" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -308,7 +308,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/lemon_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A8.jpg' width='500' /><br />
                         金桔檸檬茶是非常去火的好茶，酸酸甜甜的味道讓很多人對它愛不釋手~
 
                     </div>
@@ -337,7 +337,7 @@
     @*-----------------------------產品8結束*@
     <div class='product--red'>
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/Orange_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter8" />
+        <img src='~/photo/drinksoup/A9.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter8" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter8" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle8" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -350,7 +350,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/Orange_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A9.jpg' width='500' /><br />
                         從柳橙的果肉榨出的果汁~其酸酸甜甜的味道，十分可口~此款柳橙汁含有果肉顆粒，又是另一種風味哦~
 
                     </div>
@@ -379,7 +379,7 @@
     @*-----------------------------產品9結束*@
     <div class='product--green'>
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/redtea_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter9" />
+        <img src='~/photo/drinksoup/A10.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter9" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter9" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle9" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -392,7 +392,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/redtea_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A10.jpg' width='500' /><br />
                         日月潭附近高度、濕度、土質類似種出的阿薩姆紅茶品質、口感極佳~
 
                     </div>
@@ -422,7 +422,7 @@
 
     <div class='product--yellow'>
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/Classic_bubble_tea_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter10" />
+        <img src='~/photo/drinksoup/A11.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter10" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter10" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle10" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -435,7 +435,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/Classic_bubble_tea_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A11.jpg' width='500' /><br />
                         台灣的茶飲界的巨星~將「粉圓」加入香醇的奶茶中，口感特殊，所以受到廣大的歡迎與回響~
 
                     </div>
@@ -462,7 +462,7 @@
     @*-----------------------------產品11結束*@
     <div class='product--pink'>
         @*---copy 開始*@ <!-- Button trigger modal -->
-        <img src='~/photo/drinksoup/s8_resized.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter11" />
+        <img src='~/photo/drinksoup/A12.jpg' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter11" />
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter11" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle11" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -475,7 +475,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <img src='~/photo/drinksoup/s8_resized.jpg' width='300'><br />
+                        <img src='~/photo/drinksoup/A12.jpg' width='500' /><br />
                         味噌湯是一種湯料理，即麵豉湯，是日本具代表性的傳統食品，常見於日本人的早餐。
 
                     </div>
