--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                 {
                     @*商家專用-新訂單*@
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="新訂單">
-                        <a class="nav-link" href="~/Home/Order?userID=1">
+                        <a class="nav-link" href="~/Home/OrderBusiness">
                             <i class="fa fa-fw fa-sticky-note"></i>
                             <span class="nav-link-text">新訂單</span>
                         </a>
