--- a/task03_0606/Views/Home/OrderBusiness.cshtml
+++ b/task03_0606/Views/Home/OrderBusiness.cshtml
@@ -1,4 +1,6 @@
 ﻿@model List<task03_0606.Models.OrderList>
+@*@model List<task03_0606.Models.orderViewModel>*@
+
 @{
     ViewBag.Title = "OrderBusiness";
 }
@@ -16,141 +18,159 @@
                         <th>
                             訂單編號：
                             <label id="orderDetail_orderID" name="orderDetail_orderID"></label>
-                            <input id="orderDetail_orderID_input" name="orderDetail_orderID_input" style="display:none"  />
+                            <input id="orderDetail_orderID_input" name="orderDetail_orderID_input" style="display:none" />
                         </th>
                         <th>
                             客戶電話：
                             <label id="orderDetail_customerPhone" name="orderDetail_customerPhone"></label>
-                            <input id="orderDetail_customerPhone_input" name="orderDetail_customerPhone_input" style="display:none"  />
+                            <input id="orderDetail_customerPhone_input" name="orderDetail_customerPhone_input" style="display:none" />
                         </th>
                         <th>
                             座位：
                             <label id="orderDetail_seatID" name="orderDetail_seatID"></label>
-                            <input id="orderDetail_seatID_input" name="orderDetail_seatID_input" style="display:none"  />
+                            <input id="orderDetail_seatID_input" name="orderDetail_seatID_input" style="display:none" />
                         </th>
                         <th>
                             訂餐時間：
                             <label id="orderDetail_time" name="orderDetail_time"></label>
-                            <input id="orderDetail_time_input" name="orderDetail_time_input" style="display:none"  />
+                            <input id="orderDetail_time_input" name="orderDetail_time_input" style="display:none" />
                         </th>
 
-                        <th>@*<a href="~/Home/OrderBusiness_send" class="btn btn-success "><i class="fa fa-fw fa-sign-in"></i>出餐</a>*@
-                            <button class="btn btn-success" type="submit"><i class="fa fa-fw fa-sign-in"></i>出餐</button>
-                        </th>
-                    </tr>
-                </table>
-            </form>
-        </div>
-        <div class="table-responsive-sm">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>產品編號</th>
-                        <th>產品名稱</th>
-                        <th>數量</th>
-                        <th>單價</th>
-                        <th>小計</th>
-                        <th>訂單備註</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td>可樂(中)</td>
-                        <td>2</td>
-                        <td>30</td>
-                        <td>60</td>
-                        <td>去冰</td>
-                    </tr>
-
-                    <tr>
-                        <td></td>
-                        <td>薯條(中)</td>
-                        <td>1</td>
-                        <td>50</td>
-                        <td>50</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>00008</td>
-                        <td>漢堡</td>
-                        <td>1</td>
-                        <td>50</td>
-                        <td>50</td>
-                        <td></td>
-                    </tr>
-
-                </tbody>
-                <thead>
-                    <tr>
-                        <th>總計</th>
-                        <th> </th>
-                        <th>3</th>
-                        <th> </th>
-                        <th>160</th>
-                        <th> </th>
-                    </tr>
-                </thead>
+                        <th>
+                            @*<a href="~/Home/OrderBusiness_send" class="btn btn-success "><i class="fa fa-fw fa-sign-in"></i>出餐</a>*@
+                        <button class="btn btn-success" type="submit"><i class="fa fa-fw fa-sign-in"></i>出餐</button>
+                    </th>
+                </tr>
             </table>
-
-        </div>
+        </form>
     </div>
+    <div class="table-responsive-sm">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <td>
+                        <from>
+                            <input id="orderDetail_orderID_input2"
+                                   name="orderDetail_orderID_input"
+                                   @*style="display:none"*@
+                                    />
+                        </from>
+                    </td>
+                </tr>
+                <tr>
+                    <th>廠商</th>
+                    <th>產品編號</th>
+                    <th>產品名稱</th>
+                    <th>數量</th>
+                    <th>單價</th>
+                    <th>小計</th>
+                    <th>訂單備註</th>
+                </tr>
+            </thead>
+            <tbody id="detailList">
+                <tr>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>可樂(中)</td>
+                    <td>2</td>
+                    <td>30</td>
+                    <td>60</td>
+                    <td>去冰</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>薯條(中)</td>
+                    <td>1</td>
+                    <td>50</td>
+                    <td>50</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>漢堡</td>
+                    <td>1</td>
+                    <td>50</td>
+                    <td>50</td>
+                    <td></td>
+                </tr>
+
+            </tbody>
+            <thead>
+                <tr>
+                    <th>總計</th>
+                    <th> </th>
+                    <th> </th>
+                    <th>3</th>
+                    <th> </th>
+                    <th>160</th>
+                    <th> </th>
+                </tr>
+            </thead>
+        </table>
+
+    </div>
+</div>
 
 
 
-    <div class="col-xl-12 col-sm-12 mb-12">
-        <div class="card-header">
-            <i class="fa fa-table"></i>未出餐清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
-        </div>
-        <div class="card-body">
-            <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>接單時間</th>
-                            <th>客戶電話</th>
-                            <th>訂單單號</th>
-                            <th>座位</th>
-                            <th>結單時間</th>
+<div class="col-xl-12 col-sm-12 mb-12">
+    <div class="card-header">
+        <i class="fa fa-table"></i>未出餐清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>接單時間</th>
+                        <th>客戶電話</th>
+                        <th>訂單單號</th>
+                        <th>座位</th>
+                        <th>結單時間</th>
 
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @*@foreach (task03_0606.Models.orderViewModel order in Model)*@
+                    @foreach (task03_0606.Models.OrderList order in Model)
+                  
+                    {
+                        <tr class="orderListItem">
+                            <td>@order.OrderTime</td>
+                            <td>@order.CustomerPhone</td>
+                            <td>@order.OrderId</td>
+                            <td>@order.SeatID</td>
+                            <td>@order.FinshTime</td>
                         </tr>
-                    </thead>
-
-                    <tbody>
-                        @foreach (task03_0606.Models.OrderList order in Model)
-                        {
-                            <tr class="orderListItem">
-                                <td>@order.OrderTime</td>
-                                <td>@order.CustomerPhone</td>
-                                <td>@order.OrderId</td>
-                                <td>@order.SeatID</td>
-                                <td>@order.FinshTime</td>
-                            </tr>
-                        }
-                        @*<tr class="orderListItem">
-                                <td>201806060005</td>
-                                <td>20</td>
-                                <td>2018-06-06 12:59 PM</td>
-                                <td></td>
-                            </tr>
-                            <tr class="orderListItem">
-                                <td>201806060020</td>
-                                <td>20</td>
-                                <td>2018-06-06 6:30 PM</td>
-                                <td></td>
-                            </tr>
-                            <tr class="orderListItem">
-                                <td>201806060009</td>
-                                <td>20</td>
-                                <td>2018-06-07 12:59 PM</td>
-                                <td></td>
-                            </tr>*@
-                    </tbody>
-                </table>
-            </div>
+                    }
+                    @*<tr class="orderListItem">
+                            <td>201806060005</td>
+                            <td>20</td>
+                            <td>2018-06-06 12:59 PM</td>
+                            <td></td>
+                        </tr>
+                        <tr class="orderListItem">
+                            <td>201806060020</td>
+                            <td>20</td>
+                            <td>2018-06-06 6:30 PM</td>
+                            <td></td>
+                        </tr>
+                        <tr class="orderListItem">
+                            <td>201806060009</td>
+                            <td>20</td>
+                            <td>2018-06-07 12:59 PM</td>
+                            <td></td>
+                        </tr>*@
+                </tbody>
+            </table>
         </div>
-
     </div>
+
+</div>
 </div>
 <script>
 
@@ -163,15 +183,27 @@
         $("#orderDetail_customerPhone").text(this.cells[1].innerText);
         $("#orderDetail_orderID").text(this.cells[2].innerText);
         $("#orderDetail_seatID").text(this.cells[3].innerText);
-     
+
         $("#orderDetail_time_input").val(this.cells[0].innerText);
         $("#orderDetail_customerPhone_input").val(this.cells[1].innerText);
         $("#orderDetail_orderID_input").val(this.cells[2].innerText);
         $("#orderDetail_seatID_input").val(this.cells[3].innerText);
-       
 
+        $("#orderDetail_orderID_input2").val(this.cells[2].innerText);
         //$("#orderDetailForm").submit();
+        showOrderDetail()
+
     });
+
+    function showOrderDetail() {
+        var orderID = $("#orderDetail_orderID_input2").val;
+        $.get("~/Home/OrderBusiness_detail?orderID=" + orderID, function (data) {
+            alert(JSON.stringify(data));
+        });
+    
+        //$("#detailList").append("<tr><td>...</td></tr>")
+    }
+
 
 
 </script>
