五大分類資料庫建檔完成

--- a/task03_0606/Views/Products/Fastfoodproducts.cshtml
+++ b/task03_0606/Views/Products/Fastfoodproducts.cshtml
@@ -15,9 +15,9 @@
 
 
     <div class='row'>
-        @foreach (task03_0606.Models.Class1 db in Model) {
+       @foreach(task03_0606.Models.Class1 db in Model) {
 
-        <div class='product--blue'>
+        <div class='product--green'>
             <div class="row"></div>
                 <!-- Button trigger modal -->
                 <img src='~/photo/fastfood/@db.picture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productId" />
