--- a/task03_0606/Views/Member/Register.cshtml
+++ b/task03_0606/Views/Member/Register.cshtml
@@ -30,11 +30,8 @@
                     <input class="form-control" id="uid" name="uid" value="@ViewBag.uid" type="text" maxlength="10" pattern="(^[A-Z]{1})([1-2]{1})([0-9]{8})" required="required" aria-describedby="emailHelp" placeholder="請輸入身分證字號，首字母大寫...">
                 </div>
                 <div class="form-group">
-                    @if (ViewBag.emailCheck == "信箱已註冊") {
-                    <label for="Email1" id="EmailID">電子信箱 <i class='fa fa-times' style='color: red; '></i> 此信箱已註冊</label>
-                    } else {
-                        <label for="Email1" id="EmailID">電子信箱</label>
-                    }
+
+                    <label for="Email1" id="EmailID">電子信箱 @Html.Raw(ViewBag.html)</label>
                     <input class="form-control" id="Email1" name="Email1" value="@ViewBag.Email1" type="email" required="required" aria-describedby="emailHelp" placeholder="請輸入電子信箱...">
                 </div>
                 <div class="form-group">
@@ -151,22 +148,4 @@
     $("#Email1").blur(function () {
         regForm.submit();
     })
-
-
-
-
-    //if ($("#Password1").val() == $("#ConfirmPassword").val() && $("#Password1").val() != null && $("#Password1").val() != "") {
-    //    $("#submitBtn").click(function () {
-    //        regForm.submit();
-    //    })
-    //} else {
-    //    if ($("#Password1").val() != $("#ConfirmPassword").val()) {
-    //        $("#ConfPwdLabel").html('確認密碼 <i class="fa fa-times" style="color: red;"></i> 密碼不相符');
-    //        //$("#ConfirmPassword").tooltip("show");
-    //    }
-    //}
-
-
-
-
 </script>
